--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 !README.md
 
 /Config
+/Plugins
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,unrealengine,c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,unrealengine,c++
